<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    android:theme="@style/EditTextHint"
    tools:context="com.helenacorp.android.mybibliotheque.MainLoginActivity">

    <ImageView
        android:id="@+id/log_logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="24dp"
        android:adjustViewBounds="true"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/log_email"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.51"
        app:layout_constraintVertical_chainStyle="spread" />

    <EditText
        android:id="@+id/log_email"
        android:layout_width="0dp"
        android:layout_height="38dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:hint="@string/log_email"
        android:inputType="textEmailAddress"
        android:paddingStart="20dp"
        android:text="helena@marce.com"
        app:layout_constraintBottom_toTopOf="@+id/log_password"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:id="@+id/log_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="27dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:hint="@string/log_password"
        android:inputType="textPassword"
        android:paddingStart="20dp"
        app:layout_constraintBottom_toTopOf="@+id/log_btn"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/log_btn"
        style="@style/buttonTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="55dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:text="@string/log_btn"
        android:textColor="@color/bleud"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>
